--- a/src/Styles/Card.css
+++ b/src/Styles/Card.css
@@ -1,15 +1,17 @@
 .card {
     flex: 1 0 25%;
     min-width: 260px;
-    max-width: 280px;
-    height: 620px;
-    background: #6674b2;
+    max-width: 520px;
+    position: absolute; 
+    
+    background: #5f73c3;
     border-radius: 35px;
     margin: 5px;
     padding: 26px 15px 30px;
     position: relative;
     overflow: hidden;
 
-   
-
+    
+        
+        
 }
