--- a/src/Styles/Card.css
+++ b/src/Styles/Card.css
@@ -1,22 +1,96 @@
 .card {
-    flex: 1 0 25%;
-    min-width: 260px;
-    max-width: 520px;
-    position: absolute; 
-    
-    background: #5f73c3;
-    border-radius: 35px;
-    margin: 5px;
-    padding: 26px 15px 30px;
-    position: relative;
-    overflow: hidden;
+flex: 1 0 25%;
+min-width: 260px;
+max-width: 380px;
+height: 670px;
+background: #1b3392;
+border-radius: 35px;
+margin: 5px;
+padding: 26px 15px 30px;
+position: relative;
+overflow: hidden;
+}
+
+.img{
+    width: 80%;
+    height: 254px;
+    object-fit: cover;
+    object-position: top;
+    display: block;
+    margin: 0 auto;
+    border-radius: 50px;
+    box-shadow: 0 8px 1px rgba(255, 255, 255, 0.1),
+    0 16px 1px rgba(255, 255, 255, 0.05); 
+}
+
+.btn {
+    background: #546fe4;
+    position:inherit ;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 14px 0;
+    width: 150px;
+    text-align: center;
+    border-radius: 15px;
+    cursor: pointer;
+    transition: 0.2s;
+    z-index: 50;
+    user-select: none;
 
     
-    img {
-        width: 80px;
+}
 
+h2{
+    margin: 24px 0 0px;
+    letter-spacing: 1px;
+    line-height: 20px;
+}
+
+h5 {
+    color: $color-3;
+    letter-spacing: 1px;
+    font-size: 1.2rem;
+    font-weight: 300;
+  }
+
+  h4 {
+    letter-spacing: 1px;
+    font-size: 1.2rem;
+    margin-top: -4px;
+  }
+
+span {
+      font-size: 0.7rem;
     }
-        
+
+
+ul {
+        margin: 6px 0;
+        display: flex;
+        flex-wrap: wrap;
+      }
+
+li {
+background: #212040;
+border-radius: 18px;
+padding: 0px 7px;
+margin: 0 4px 4px 0;
+font-size: 1.1rem;
+}
+
+h3 {
+letter-spacing: 1px;
+font-size: 1.4rem;
+margin-top: 10px;
+}
+p {
+color: $color-3;
+font-size: 1.3rem;
+line-height: 20px;
+height: 160px;
+overflow-y: scroll;
+
 }
 
 
