--- a/src/Styles/Card.css
+++ b/src/Styles/Card.css
@@ -2,13 +2,14 @@
 flex: 1 0 25%;
 min-width: 260px;
 max-width: 380px;
-height: 670px;
+height: 700px;
 background: #1b3392;
 border-radius: 35px;
-margin: 5px;
+margin: 15px;
 padding: 26px 15px 30px;
 position: relative;
 overflow: hidden;
+
 }
 
 .img{
@@ -24,7 +25,7 @@ overflow: hidden;
 }
 
 .btn {
-    background: #546fe4;
+    background: #293152;
     position:inherit ;
     bottom: 20px;
     left: 50%;
@@ -61,7 +62,7 @@ h5 {
   }
 
 span {
-      font-size: 0.7rem;
+      font-size: 1.7rem;
     }
 
 
